// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render Radio (checked + disabled) 1`] = `
.c5 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
  cursor: not-allowed;
}

.c5:last-child {
  margin-bottom: 0;
}

.c4 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #F6F7FC;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
  cursor: not-allowed;
  border-color: #D9DCE9;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #B4BAD1;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

.c3:after {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby="_r_9_"
    checked=""
    class="c1 c2"
    disabled=""
    id="_r_8_"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="_r_8_"
  />
  <div
    class="c4"
  >
    <label
      aria-hidden="true"
      class="c5"
      disabled=""
      for="_r_8_"
      id="_r_9_"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Radio (checked) 1`] = `
.c5 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c5:last-child {
  margin-bottom: 0;
}

.c4 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #2852EB;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

.c3:after {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby="_r_1_"
    checked=""
    class="c1 c2"
    id="_r_0_"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_0_"
  />
  <div
    class="c4"
  >
    <label
      class="c5"
      for="_r_0_"
      id="_r_1_"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Radio (unchecked + description object) 1`] = `
.c6 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  transition: all 70ms ease-out;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  text-decoration: none;
}

.c7:active {
  color: #0024A6;
}

.c7:hover:not(:active) {
  color: #0024A6;
}

.c8 {
  font-size: 0.875rem;
}

.c5 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c5:last-child {
  margin-bottom: 0;
}

.c4 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby="_r_5_"
    class="c1 c2"
    id="_r_4_"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_4_"
  />
  <div
    class="c4"
  >
    <label
      class="c5"
      for="_r_4_"
      id="_r_5_"
    >
      Unchecked
    </label>
    <p
      class="c6"
    >
      description
       
      <a
        class="c7 c8"
        href="bar"
        target="foo"
      >
        learn more
      </a>
    </p>
  </div>
</div>
`;

exports[`render Radio (unchecked + description text) 1`] = `
.c6 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c5 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c5:last-child {
  margin-bottom: 0;
}

.c4 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby="_r_7_"
    class="c1 c2"
    id="_r_6_"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_6_"
  />
  <div
    class="c4"
  >
    <label
      class="c5"
      for="_r_6_"
      id="_r_7_"
    >
      Unchecked
    </label>
    <p
      class="c6"
    >
      description
    </p>
  </div>
</div>
`;

exports[`render Radio (unchecked + disabled) 1`] = `
.c5 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
  cursor: not-allowed;
}

.c5:last-child {
  margin-bottom: 0;
}

.c4 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #F6F7FC;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
  cursor: not-allowed;
  border-color: #D9DCE9;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #B4BAD1;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby="_r_b_"
    class="c1 c2"
    disabled=""
    id="_r_a_"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="_r_a_"
  />
  <div
    class="c4"
  >
    <label
      aria-hidden="true"
      class="c5"
      disabled=""
      for="_r_a_"
      id="_r_b_"
    >
      Unchecked
    </label>
  </div>
</div>
`;

exports[`render Radio (unchecked) 1`] = `
.c5 {
  color: #313440;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0 0 1rem;
  cursor: pointer;
}

.c5:last-child {
  margin-bottom: 0;
}

.c4 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus+.c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby="_r_3_"
    class="c1 c2"
    id="_r_2_"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="_r_2_"
  />
  <div
    class="c4"
  >
    <label
      class="c5"
      for="_r_2_"
      id="_r_3_"
    >
      Unchecked
    </label>
  </div>
</div>
`;
